--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Syllabus</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Lectures</a></li>
+                    <li class="nav-item"><a class="nav-link" href="code.html">Lectures</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Assignments</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
                 </ul>
