--- a/code.html
+++ b/code.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/github.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
 </head>
 <body>
     <header>
@@ -37,9 +38,12 @@
         </section>
 
         <section id="questionsSection">
-            <h2>Uploaded Questions</h2>
-            <div id="questionsList"></div>
-        </section>
+    <h2>Uploaded Questions and Solutions</h2>
+    <div id="questionsList" class="questions-container"></div>
+    <!-- Link to display.html when the button is clicked -->
+    <a href="display.html" id="displayButton" class="display-btn">Display Questions and Codes</a>
+</section>
+
     </main>
 
     <script src="script.js"></script>
